Verion 0.9.45dev (?? ??? 2004)
  - Cleaning up HTML & CSS
  - Updated view-preview doc with more modular code
  - Adding additional save button in pref.php to mirror admin.php
  - Extending admin.php to pref.php
  - Modifying class 'navlinks' to now read just 'nav'
  - Adding patch 1059984: alternating row colors for activity_log.php
  - Removing obsolete styles from styles.php
  - Adding title attributes to various links
  - Moving & making login/logout link to be inline with current user in
  trailer & dynamic depending on if user is logged in or not
  - Updating upgrading docs with easier to read code areas
  - Added patch 1059130: minical function implementation
  - Added patch 1016648: datesel.php when global vars=off
  - Added patch 1045008: Weekly (Users vertical) view colors
  - Cleaning up styles.php
  - Bringing views up to date
  - Applying print-media patch. Credit to Adam Roben.
  - Fixed bug causing today link not to work when not logged in
  - Fixed Bug 1057889: Public events duplicated in month view (view_t.php)
  - Fixed Bug 1057887: Month view (view_t.php) doubles last sunday in October (DST)
  - Fixed Bug 983139: fix date in notice for single deleted item from repeating
  - Fixed Bug 1019285: Unable to edit a single date of a repeating event
  - Fixed Bug 1056621: "Edit entry for this date" won't work for repeating events
  - Added Patch 1024543: Fix editing of single instance of repeating event
  - Updated trailer with title attribute for links
  - Added title attributes to time cells in view_d.php
  - Created styles for view_d.php
  - Fixed random border-rendering issues in week.php
  - Fixed Bug 1016135: Time is listed in email for untimed events
  - Fixed Bug 1026762: import handler --circular code
  - Fixed Bug 1020450: upcomming rev1.3 doesn't display layers
  - Added user-ldap patch by David Black to use $ldap_user_attr throughout script
  - Only allow word characters (a-zA-Z_0-9) in nonuser calendar ID's
  - Fixing up styles in views